[package]
name = "crabtml"
version = "0.1.9"
edition = "2021"
authors = ["Travis Wagner <dev@techsavvytravvy.com>"]
license = "MIT"
description = "A simple and flexible template engine written in Rust."
readme = "README.md"
repository = "https://github.com/trvswgnr/crabtml"
keywords = ["template", "templating", "language", "engine", "html"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
